--- a/Cowboys&CigrettesCaseStudy/Cowboy Cigarettes Case Study - Tier 2.ipynb
+++ b/Cowboys&CigrettesCaseStudy/Cowboy Cigarettes Case Study - Tier 2.ipynb
@@ -584,8 +584,8 @@
    "outputs": [],
    "source": [
     "# Import mean_squared_error and ARIMA\n",
-    "from sklearn.metrics import _ _ _\n",
-    "from statsmodels.tsa.arima_model import _ _ _"
+    "from sklearn.metrics import mean_squared_erorr\n",
+    "from statsmodels.tsa.arima_model import ARIMA"
    ]
   },
   {
@@ -597,31 +597,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a function called evaluate_arima_model to find the MSE of a single ARIMA model \n",
-    "def _ _ _(data, arima_order):\n",
+    "def evaluate_arima_model(data, arima_order):\n",
     "    # Needs to be an integer because it is later used as an index.\n",
     "    # Use int()\n",
-    "    split=_ _ _(len(data) * 0.8) \n",
+    "    split=int(len(data) * 0.8) \n",
     "    # Make train and test variables, with 'train, test'\n",
-    "    _ _ _, _ _ _ = data[0:split], data[split:len(data)]\n",
+    "    train, test = data[0:split], data[split:len(data)]\n",
     "    past=[x for x in train]\n",
     "    # make predictions. Declare a variable with that name\n",
-    "    _ _ _ = list()\n",
+    "    predictions = list()\n",
     "    for i in range(len(test)):#timestep-wise comparison between test data and one-step prediction ARIMA model. \n",
     "        model = ARIMA(past, order=arima_order)\n",
     "        model_fit = model.fit(disp=0)\n",
     "        future = model_fit.forecast()[0]\n",
     "        # Append() here\n",
-    "        predictions._ _ _(future)\n",
+    "        predictions.append(future)\n",
     "        past.append(test[i])\n",
     "    # calculate out of sample error\n",
     "    error = mean_squared_error(test, predictions)\n",
     "    # Return the error\n",
-    "    return _ _ _"
+    "    return error"
    ]
   },
   {
@@ -633,24 +633,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a function called evaluate_models to evaluate different ARIMA models with several different p, d, and q values.\n",
-    "def _ _ _(dataset, p_values, d_values, q_values):\n",
+    "def evaluate_models(dataset, p_values, d_values, q_values):\n",
     "    best_score, best_cfg = float(\"inf\"), None\n",
     "    # Iterate through p_values\n",
-    "    for p in _ _ _:\n",
+    "    for p in p_values:\n",
     "        # Iterate through d_values\n",
-    "        for d in _ _ _:\n",
+    "        for d in d_values:\n",
     "            # Iterate through q_values\n",
-    "            for q in _ _ _:\n",
+    "            for q in q_values:\n",
     "                # p, d, q iterator variables in that order\n",
-    "                order = (_ _ _,_ _ _,_ _ _)\n",
+    "                order = (p, d, q)\n",
     "                try:\n",
     "                    # Make a variable called mse for the Mean squared error\n",
-    "                    _ _ _ = evaluate_arima_model(dataset, order)\n",
+    "                    mse = evaluate_arima_model(dataset, order)\n",
     "                    if mse < best_score:\n",
     "                        best_score, best_cfg = mse, order\n",
     "                    print('ARIMA%s MSE=%.3f' % (order,mse))\n",
@@ -669,7 +669,7 @@
     "# Fill in the blanks as appropriate\n",
     "_ _ _ = [x for x in range(0, 3)]\n",
     "_ _ _ = [_ _ _]\n",
-    "_ _ _ = [_ _ _]"
+    "_ _ _ = [_ _ _"
    ]
   },
   {
@@ -831,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
