--- a/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
+++ b/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,14 +1149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistic = -11.893, pvalue = 0.0000\n"
+      "t-statistic = -11.893, p-value = 0.0000\n"
      ]
     }
    ],
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1182,21 +1182,14 @@
        "Ttest_indResult(statistic=-11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.ttest_ind(medical0.charges, medical1.charges)"
+    "stats.ttest_ind(medical0.charges, medical1.charges, equal_var=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1225,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1228,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
